--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.10
 inflection==0.5.1
+mysqlclient==2.2.7
 packaging==25.0
 pillow==11.3.0
 PyJWT==2.10.1
