--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
 asgiref==3.9.1
+bcrypt==4.3.0
+boto3==1.40.14
+botocore==1.40.14
+cffi==1.17.1
+cryptography==45.0.6
 Django==5.2.4
 django-cors-headers==4.7.0
 django-filter==25.1
+django-storages==1.14.6
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.10
 inflection==0.5.1
+invoke==2.2.0
+jmespath==1.0.1
 mysqlclient==2.2.7
 packaging==25.0
+paramiko==2.12.0
 pillow==11.3.0
+pycparser==2.22
 PyJWT==2.10.1
+PyMySQL==1.1.1
+PyNaCl==1.5.0
+python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
+s3transfer==0.13.1
+six==1.17.0
 sqlparse==0.5.3
+sshtunnel==0.4.0
 tzdata==2025.2
 uritemplate==4.2.0
+urllib3==2.5.0
